--- a/applications/color.app.yaml
+++ b/applications/color.app.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   destination:
     namespace: demo
-    server: https://kubernetes.default.svc
+    name: cfdemo
   project: dev
   source:
     path: ./manifests/color/overlays/dev
