--- a/applications/color.app.yaml
+++ b/applications/color.app.yaml
@@ -11,7 +11,7 @@ spec:
   destination:
     namespace: demo
     name: cfdemo
-  project: dev
+  project: default
   source:
     path: ./manifests/color/overlays/dev
     repoURL: https://github.com/Codefresh-training/codefresh-runtime-applications.git
