Fix path to app manifets
Signed-off-by: Laurent Rochette <laurent.rochette@codefresh.io>

--- a/applications/color.app.yaml
+++ b/applications/color.app.yaml
@@ -13,7 +13,7 @@ spec:
     name: cfdemo
   project: default
   source:
-    path: ./manifests/color/overlays/dev
+    path: ./manifests/color/
     repoURL: https://github.com/Codefresh-training/codefresh-runtime-applications.git
     targetRevision: main
   syncPolicy:
