--- a/manifests/color/rollout.yaml
+++ b/manifests/color/rollout.yaml
@@ -17,7 +17,7 @@ spec:
         - name: color
           # blue, green, yellow, purple, red, orange, magenta
           # magenta does not exis so shold fail
-          image: argoproj/rollouts-demo:red
+          image: argoproj/rollouts-demo:magenta
           imagePullPolicy: Always
           ports:
             - name: http
