--- a/applications/color.app.yaml
+++ b/applications/color.app.yaml
@@ -18,7 +18,7 @@ spec:
     targetRevision: main
   syncPolicy:
     syncOptions:
-    - createNamespace=true
+    - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
