--- a/manifests/color/dev/ns.yaml
+++ b/manifests/color/dev/ns.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   annotations:
     argocd.argoproj.io/sync-options: Prune=true
-  name: demo
+  name: dev
 spec:
   finalizers:
   - kubernetes
